tests/typechecker/should_fail/type_annotations_17.csp
c :: Eq a => a=>Event
channel c : {}
